doc: Добавить описание d README о swagger; fix: Поправить аннотации swagger - Добавлено описание Swagger в README -  Поправлены аннотации Swagger в части User и Login Request
